# wsidicom

./: .flake8  .gitignore  CHANGELOG.md  LICENCE  README.md  TESSELLA_BACKEND_FINDINGS.md  TODO.txt  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: flake8.yml  lint.yml  pytest.yml  python-package.yml  release.yml
test/: data_gen.py  test_annotation.py  test_dcmfiles.py  test_interface.py  test_save.py
tests/: benchmark.py  codec.py  conftest.py  data_gen.py  download_test_images.py  test_annotation.py  test_codes.py  test_config.py  test_dcmfiles.py  test_decoder.py  test_downsampler.py  test_geometry.py  test_interface.py  test_levels.py  test_optical.py  test_options.py  test_pyramids.py  test_save.py  test_stitcher.py  test_target.py  test_thread.py  test_tile_index.py  test_web.py  test_wsi_dataset.py  test_wsidicom_file.py  test_wsidicom_file_target.py  test_wsidicom_file_writer.py  test_wsidicom_image_data.py  test_wsidicom_integration.py  test_wsidicom_levels.py  test_wsidicom_paths.py  test_wsidicomfile.py  wsi_test_files.py
tests/annotation/asap/: asap-pointset.xml
tests/annotation/sectra/: pathologycore-area.json  pathologycore-polyline.json
tests/codec/: conftest.py  create_test_files.py  test_decoder.py  test_encoder.py  test_rle.py
tests/file/: conftest.py  test_concatenation_integration.py  test_file_writer.py  test_file_writer_metadata.py  test_instance_file_writer.py  test_instance_split_integration.py  test_part_factory.py  test_part_sinks.py  test_splitters.py  test_wsidicom_file_source.py  test_wsidicom_file_target.py  test_wsidicom_file_target_integration.py  test_wsidicom_stream_opener.py
tests/file/io/: test_pixel_data_writer.py  test_wsidicom_io.py  test_wsidicom_reader.py  test_wsidicom_writer.py
tests/file/io/frame_index/: test_frame_index.py  test_offset_table_type.py  test_offset_table_writer.py
tests/io/: test_frame_index.py  test_offset_table_writer.py  test_wsidicom_io.py
tests/metadata/: conftest.py  helpers.py  test_base_model.py  test_optical_path.py  test_sample.py  test_uid_generator.py
tests/metadata/dicom_schema/: conftest.py  helpers.py  test_contributing_equipment.py  test_dicom_fields.py  test_dicom_lut.py  test_dicom_sample.py  test_dicom_schema.py  test_nesting.py
tests/metadata/dicom_schema/sample/: conftest.py  test_dicom_preparation_step.py  test_dicom_sample.py  test_example_specimen_module.py
tests/metadata/json_schema/: conftest.py  helpers.py  test_json_fields.py  test_json_sample.py  test_json_schema.py  test_json_slide.py
tests/testdata/: region_definitions.json
tests/testdata/annotation/asap/: asap-dot.xml  asap-polygon.xml
tests/testdata/annotation/cytomine/: cytomine-circle.txt  cytomine-freehand-line.txt  cytomine-freehand-polygon.txt  cytomine-line.txt  cytomine-point.txt  cytomine-polygon.txt  cytomine-rectangle.txt
tests/testdata/annotation/qupath_geojson/: qupath-brush.json  qupath-ellipse.json  qupath-line.json  qupath-multipoint.json  (+5 more)
tests/web/: test_wsidicom_webclient.py
tests/writing/: test_encoder_pool.py  test_pyramid_tile_accumulator.py  test_tile_cache.py  test_tile_sequencer.py
wsidicom/: __init__.py  cache.py  conceptcode.py  config.py  dataset.py  decoder.py  downsampler.py  encoder.py  errors.py  file.py  file_writer.py  geometry.py  graphical_annotations.py  image.py  image_data.py  instance.py  interface.py  optical.py  options.py  pyramids.py  resource_pool.py  series.py  source.py  stitcher.py  stringprinting.py  tags.py  target.py  thread.py  uid.py  wsidicom.py
wsidicom/codec/: __init__.py  codec.py  decoder.py  encoder.py  media_types.py  optionals.py  rle.py  settings.py
wsidicom/file/: __init__.py  base.py  file.py  file_writer.py  instance_split.py  writer.py  wsidicom_file.py  wsidicom_file_base.py  wsidicom_file_image_data.py  wsidicom_file_source.py  wsidicom_file_target.py  wsidicom_file_writer.py  wsidicom_stream_opener.py
wsidicom/file/io/: __init__.py  tags.py  wsidicom_io.py  wsidicom_reader.py  wsidicom_writer.py
wsidicom/group/: __init__.py  group.py  level.py
wsidicom/image_data/: __init__.py  dicom_image_data.py  dicom_web_image_data.py  image_data.py  pillow_image_data.py
wsidicom/instance/: __init__.py  dataset.py  image_coordinate_system.py  image_data.py  image_origin.py  instance.py  numpy_image_data.py  pillow_image_data.py  wsidicom_image_data.py
wsidicom/instance/tile_index/: __init__.py  full_tile_index.py  sparse_tile_index.py  tile_index.py
wsidicom/metadata/: __init__.py  contributing_equipment.py  defaults.py  equipment.py  image.py  label.py  optical_path.py  overview.py  patient.py  pyramid.py  sample.py  series.py  slide.py  study.py  uid_generator.py  wsi.py
wsidicom/metadata/dicom_schema/: base_dicom_schema.py  dicom_fields.py  dicom_schema.py  equipment.py  fields.py  image.py  label.py  optical_path.py  patient.py  sample.py  schema.py  series.py  slide.py  study.py  wsi.py
wsidicom/metadata/json_schema/: equipment.py  fields.py  image.py  label.py  optical.py  patient.py  sample.py  series.py  slide.py  study.py  wsi.py
wsidicom/metadata/schema/: common.py
wsidicom/series/: __init__.py  labels.py  levels.py  overviews.py  pyramid.py  pyramids.py  series.py
wsidicom/tile_index/: __init__.py  full_tile_index.py  sparse_tile_index.py  tile_index.py
wsidicom/web/: __init__.py  web.py  wsidicom_web_client.py  wsidicom_web_image_data.py  wsidicom_web_source.py
wsidicom/writing/: __init__.py  encoder_pool.py  instance_writers.py  models.py  pyramid_tile_accumulator.py  tile_cache.py  tile_readers.py  tile_sequencer.py
wsidicom/wsidicom_file/: __init__.py  wsidicom_file.py  wsidicom_file_image_data.py  wsidicom_file_source.py
wsidicom/wsidicom_web/: __init__.py  wsidicom_web.py  wsidicom_web_client.py  wsidicom_web_image_data.py  wsidicom_web_source.py
(+67 files in other folders)
