[tool.poetry]
name = "wsidicom"
version = "0.21.2"
description = "Tools for handling DICOM based whole scan images"
authors = ["Erik O Gabrielsson <erik.o.gabrielsson@sectra.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/imi-bigpicture/wsidicom"
packages = [{include = "wsidicom"}]
keywords = ["whole slide image", "digital pathology", "annotations", "dicom"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.22.0"
pydicom = ">=3.0.0"
Pillow = ">=9.1.1"
dicomweb-client = "^0.59.2"
marshmallow = "^3.20.1"
imagecodecs = { version = "^2024.1.1, !=2024.9.22", optional = true }
pylibjpeg-rle = { version = "^1.3.0", optional = true }
fsspec = "^2024.2.0"
universal-pathlib = "^0.2.1"
pyjpegls = { version = "^1.2.0", optional = true }
pylibjpeg-openjpeg = { version = "^2.1.1", optional = true }

[tool.poetry.extras]
imagecodecs = ["imagecodecs"]
pylibjpeg-rle = ["pylibjpeg-rle"]
pyjpegls = ["pyjpegls"]
pylibjpeg-openjpeg = ["pylibjpeg-openjpeg"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-watch = "^4.2.0"
pytest-mock = "^3.12.0"
xmltodict = "^0.12.0"
shapely = "^2.0.2"
black = "^24.2.0"
flake8 = "^7.0.0"
codespell = "^2.2.5"
wsidicom-data =  "^0.3.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
