[project]
name = "wsidicom"
version = "0.32.1"
description = "Tools for handling DICOM based whole scan images"
authors = [
    {name = "Erik O Gabrielsson", email = "erik.o.gabrielsson@sectra.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["whole slide image", "digital pathology", "annotations", "dicom"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = [
    "numpy>=1.22.0",
    "pydicom>=3.0.0",
    "Pillow>=9.1.1",
    "dicomweb-client>=0.59.2,<0.60.0",
    "marshmallow>=3.20.1,<4.0.0",
    "fsspec>=2024.2.0",
    "universal-pathlib>=0.2.1,<0.3.0",
    "cachetools>=7.1.3",
]

[project.optional-dependencies]
imagecodecs = ["imagecodecs>=2024.1.1,!=2024.9.22"]
pylibjpeg-rle = ["pylibjpeg-rle>=2.0.0,<3.0.0"]
pyjpegls = ["pyjpegls>=1.2.0,<2.0.0"]
pylibjpeg-openjpeg = ["pylibjpeg-openjpeg>=2.1.1,<3.0.0"]

[dependency-groups]
dev = [
    "pytest>=7.2.0,<10.0.0",
    "xmltodict>=0.12.0,<0.13.0",
    "shapely>=2.0.2,<3.0.0",
    "ruff>=0.15.14",
    "pyright>=1.1.409",
    "codespell>=2.2.5,<3.0.0",
    "wsidicom-data>=0.3.0,<0.4.0",
    "decoy>=2.2.0,<3.0.0",
    "pytest-testmon>=2.2.0",
    "pytest-watcher>=0.6.3",
]

[project.urls]
Repository = "https://github.com/imi-bigpicture/wsidicom"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
# E/F: pycodestyle+pyflakes (replaces the old flake8 dep)
# I: import sorting, UP: pyupgrade, B: bugbear, SIM: simplify
# S: flake8-bandit security rules (the free SAST baseline)
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
# S101: asserts are used throughout for type narrowing and internal invariants.
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use hardcoded credentials (S105/S106), pseudo-random test
# data (S311), md5 for image-hash comparison (S324), file handles whose lifetime
# is managed by a fixture/wrapper rather than a context manager (SIM115), and long
# lines from embedded test data such as base64 blobs, URLs, and checksums (E501).
"tests/**" = ["S105", "S106", "S311", "S324", "SIM115", "E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest-watcher]
now = true
runner = "pytest"
runner_args = ["--testmon"]
ignore_patterns = [".venv/*"]